2009-11-19  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=31690
        Make SocketStreamHandleCFNet work on Windows

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def:
        * wtf/MainThread.cpp:
        (WTF::FunctionWithContext::FunctionWithContext):
        (WTF::dispatchFunctionsFromMainThread):
        (WTF::callOnMainThreadAndWait):
        * wtf/MainThread.h:
        Re-add callOnMainThreadAndWait(), which was removed in bug 23926.

2009-11-19  Dmitry Titov  <dimich@chromium.org>

        Reviewed by David Levin.

        isMainThread() on Chromium (Mac and Linux) is so slow it timeouts LayoutTests..
        https://bugs.webkit.org/show_bug.cgi?id=31693

        * wtf/ThreadingPthreads.cpp:
        (WTF::initializeThreading): grab and use the pthread_t of the main thread instead of ThreadIdentifier.
        (WTF::isMainThread): Ditto.

2009-11-19  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Darin Adler.

        Remove HAVE(STRING_H) guard from JavaScriptCore
        https://bugs.webkit.org/show_bug.cgi?id=31668

        * config.h:
        * runtime/UString.cpp:

2009-11-19  Dumitru Daniliuc  <dumi@chromium.org>

        Reviewed by Dmitry Titov.

        Fixing a bug in MessageQueue::removeIf() that leads to an
        assertion failure.

        https://bugs.webkit.org/show_bug.cgi?id=31657

        * wtf/MessageQueue.h:
        (WTF::MessageQueue::removeIf):

2009-11-19  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Darin Adler.

        Remove HAVE(FLOAT_H) guard
        https://bugs.webkit.org/show_bug.cgi?id=31661

        JavaScriptCore has a dependency on float.h, there is
        no need to guard float.h.

        * runtime/DatePrototype.cpp: Remove include directive 
        for float.h as it is included in MathExtras.h already.
        * runtime/Operations.cpp: Ditto.
        * runtime/UString.cpp: Ditto.