@@ -1,3 +1,14 @@
+2009-11-19  Steve Block  <steveblock@google.com>
+
+        Reviewed by Darin Fisher.
+
+        Android port lacks configuration in Platform.h and config.h.
+        https://bugs.webkit.org/show_bug.cgi?id=31671
+
+        Build change only. No new tests possible.
+
+        * config.h: Modified. Added Android-specific configuration.
+
 2009-11-20  Roland Steiner  <rolandsteiner@chromium.org>
 
         Reviewed by Darin Adler.
