@@ -1,3 +1,10 @@
+2009-11-19  Steve Block  <steveblock@google.com>
+
+        Android port lacks configuration in Platform.h and config.h.
+        https://bugs.webkit.org/show_bug.cgi?id=31671
+
+        * wtf/Platform.h: Modified. Added Android-specific configuration.
+
 2009-11-19  Alexey Proskuryakov  <ap@apple.com>
 
         Reviewed by Darin Adler.
